hopefully finally fix the shift

--- a/styles.css
+++ b/styles.css
@@ -271,11 +271,11 @@ h1 {
 @keyframes new-commuter-entrance {
     0% {
         opacity: 0;
-        transform: translateY(20px);
+        transform: translateX(-50%) translateY(20px);
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(-50%) translateY(0);
     }
 }
 
